--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@react-three/drei": "^9.108.1",
     "@react-three/fiber": "^8.16.8",
+    "@react-three/postprocessing": "^2.16.2",
     "@types/three": "0.152.1",
     "autoprefixer": "^10.4.19",
     "jotai": "^2.8.4",
     "leva": "^0.9.35",
     "maath": "^0.10.8",
     "postcss": "^8.4.39",
+    "postprocessing": "^6.35.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.4",
